# Knowledge-topology

./: .gitignore  AGENTS.md  AUDIENCE.md  CLAUDE.md  COMPILE.md  ESCALATIONS.md  GIT_PROTOCOL.md  PACKAGE_GATES.md  POLICY.md  QUEUES.md  RAW_POLICY.md  README.md  SCHEMA.md  SCHEMA_EVOLUTION.md  SECURITY.md  STORAGE.md  SUBJECTS.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: topology-pre-tool-use.sh
.codex/: README.md
docs/: IMPLEMENTATION_PLAN.md  MAINLINE_STATUS.md  OPENCLAW.md  OPENCLAW_AGENT.md  P0_CONTRACT_REALITY_PASS.md
docs/package-plans/: P10_MAINLINE_CLOSURE.md  P11_1_BUILDER_WRITEBACK_SYMMETRY.md  P11_2_DIGEST_RUNNER_CLOSURE.md  P11_3_FETCH_V2.md  P11_5_LINT_DOCTOR_SPLIT.md  (+22 more)
prompts/: digest_deep.md  digest_standard.md
tests/: support_subjects.py  test_p0_contracts.py  test_p10_mainline_closure.py  test_p11_1_builder_writeback_symmetry.py  test_p11_2_digest_runner.py  test_p11_3_fetch_v2.py  test_p11_4_openclaw_live.py  test_p11_5_lint_doctor_split.py  test_p11_6_subject_file_index.py  test_p11_7_openclaw_wiring.py  test_p12_1_consumer_bootstrap.py  test_p12_2_video_media_closure.py  test_p12_3_openclaw_consumer_bundle.py  test_p12_4_maintainer_supervisor.py  test_p12_5_evaluation_benchmark.py  test_p13_1_trusted_video_provider.py  test_p13_2_local_video_provider_generator.py  test_p1_engine_skeleton.py  test_p2_source_packet_fetch.py  test_p3_digest_contract.py  test_p4_reconcile_mutation.py  test_p5_apply_gate.py  test_p6_builder_compose.py  test_p7_writeback_lint_doctor.py  test_p8_agent_integration.py  test_p9_openclaw_projection.py
(+80 files in other folders)
