[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-topology"
version = "0.0.0"
description = "File-backed canonical topology substrate for agent-usable knowledge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
topology = "knowledge_topology.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
